# readthis

./: README.md  config.json  pyproject.toml
.github/workflows/: build.yml  release.yml
readthis/: __main__.py
